TMDM-10320: Substitute BASE64Encoder with utilities class Base64 to d… (#41)
* TMDM-10320: Substitute BASE64Encoder with utilities class Base64 to do encoding things.

* TMDM-10320: Substitute with new api for encoding.